Fixed logo spacing and sizing problems

--- a/Website/mainStyle.css
+++ b/Website/mainStyle.css
@@ -14,8 +14,8 @@ body {
 #logo_container {
   position: relative;
   margin: 10px auto;
-  width: 450px;
-  height: 281px;
+  width: 250px;
+  height: 250px;
   z-index: 1;
 }
 #logo_container {
